package com.sep490.ecoverse_be.enums;

public enum SubscriberType {
    SCHOOL,
    PARTNERSHIP
}
